# fastapp

./: .gitignore  Dockerfile  LICENSE  README.md  cli.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  redoc.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/helpers/: version_check.py
.github/workflows/: docs.yml  lint.yml  release.yml  tests.yml  version-checker.yml
_modules/: index.html
_modules/fastapp/: serve.html
_modules/fastapp/app/: base.html  machine_learning.html  utils.html
_modules/fastapp/models/: base.html  bodies.html  responses.html
_modules/ml_server/: app.html  serve.html  utils.html
_modules/ml_server/app/: base.html  machine_learning.html  utils.html
_modules/ml_server/models/: base.html  bodies.html  responses.html
_sources/: cli.rst.txt  index.rst.txt  readme.rst.txt  redoc.rst.txt
_sources/api/: fastapp.app.rst.txt  fastapp.config.rst.txt  fastapp.models.rst.txt  fastapp.rst.txt  ml_server.app.rst.txt  ml_server.config.rst.txt  ml_server.models.rst.txt  ml_server.rst.txt  modules.rst.txt
_static/: redoc.html
api/: fastapp.app.html  fastapp.config.html  fastapp.html  fastapp.models.html  ml_server.app.html  ml_server.config.html  ml_server.html  ml_server.models.html  modules.html
docs/: Makefile  README.md  requirements.txt
docs/source/: cli.rst  conf.py  index.rst  readme.rst  redoc.rst
fastapp/: __init__.py  __main__.py  _cli.py  _utils.py  _version.py  serve.py
fastapp/app/: __init__.py  base.py  example.py  machine_learning.py  utils.py
fastapp/app/templates/: index.html
fastapp/config/: __init__.py  gunicorn_config.py  logging_config.yaml  nginx.conf  swagger.json  uvicorn_logging_config.yaml
fastapp/models/: __init__.py  base.py  bodies.py  responses.py
ml_server/: __init__.py  __main__.py  _cli.py  _utils.py  _version.py  app.py  cli.py  serve.py  utils.py
ml_server/app/: __init__.py  asgi.py  base.py  example.py  machine_learning.py  utils.py
ml_server/app/static/: index.html
ml_server/app/templates/: index.html
ml_server/config/: __init__.py  gunicorn_config.py  logging_config.yaml  nginx.conf  openapi.json  swagger.json
ml_server/models/: __init__.py  base.py  bodies.py  responses.py
tests/: conftest.py  test_example.py
