[metadata]
name = ml-server
version = attr: ml_server._version.__version__
author = Justin Flannery
author_email = juftin@juftin.com
maintainer = Justin Flannery
maintainer_email = juftin@juftin.com
description = Machine Learning ASGI Server with FastAPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/juftin/ml-server
project_urls =
    Discussions = https://github.com/juftin/ml-server/discussions
    Bug Tracker = https://github.com/juftin/ml-server/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests
    tests.*

[options.package_data]
ml_server =
    config/nginx.conf
    config/swagger.json
    config/logging_config.yaml

[options.extras_require]
dev =
    tox
    pytest
    coverage
    flake8

[options.entry_points]
console_scripts =
    ml-server = ml_server.cli:cli
