[metadata]
name = fastapp
version = attr: fastapp._version.__version__
author = Justin Flannery
author_email = juftin@juftin.com
maintainer = Justin Flannery
maintainer_email = juftin@juftin.com
description = Machine Learning ASGI Server with FastAPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/juftin/fastapp
project_urls =
    Discussions = https://github.com/juftin/fastapp/discussions
    Bug Tracker = https://github.com/juftin/fastapp/issues
    Documentation = https://juftin.com/fastapp
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7
install_requires =
    FastApi
    pydantic
    gunicorn
    uvicorn
    click
    jinja2
    pyyaml

[options.packages.find]
exclude =
    docs
    tests
    tests.*

[options.package_data]
fastapp =
    config/*
    app/static/*
    app/templates/*

[options.extras_require]
example =
    numpy
    pandas
    nltk
    joblib
    gensim
dev =
    tox
    pytest
    coverage
    flake8

[options.entry_points]
console_scripts =
    fastapp = fastapp._cli:cli
